; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_combine_interface_details.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_combine_interface_details.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INTERFACE_FLAGS_MASK = common dso_local global i32 0, align 4
@INTERFACE_FLAGS_SHIFT = common dso_local global i32 0, align 4
@INTERFACE_INDEX_MASK = common dso_local global i32 0, align 4
@INTERFACE_INDEX_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @combine_interface_details to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @combine_interface_details(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = trunc i64 %5 to i32
  %7 = load i32, i32* @INTERFACE_FLAGS_MASK, align 4
  %8 = and i32 %6, %7
  %9 = load i32, i32* @INTERFACE_FLAGS_SHIFT, align 4
  %10 = shl i32 %8, %9
  %11 = load i64, i64* %3, align 8
  %12 = trunc i64 %11 to i32
  %13 = load i32, i32* @INTERFACE_INDEX_MASK, align 4
  %14 = and i32 %12, %13
  %15 = load i32, i32* @INTERFACE_INDEX_SHIFT, align 4
  %16 = shl i32 %14, %15
  %17 = or i32 %10, %16
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
